# qalculate-helper

./: .build_env.readme  .gitignore  Makefile  README.md  meson.build  meson_options.txt  qalculate-helper.cpp
include/: config.h  exchange_update_exception.h  qalculate_exception.h  security_util.h  timeout_exception.h
src/: exchange_rate_updater.cpp  exchange_update_exception.cpp  qalculate-helper.cpp  qalculate_exception.cpp  qalculate_helper.cpp  security_util.cpp  timeout_exception.cpp
